@@ -14,7 +14,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompCmdsSZ.c,v 1.1.2.8 2010/03/23 14:07:34 dgp Exp $
+ * RCS: @(#) $Id: tclCompCmdsSZ.c,v 1.1.2.9 2010/03/28 03:24:07 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -1995,9 +1995,6 @@ TclCompileTryCmd(
 	    } else if (tokenPtr[1].size == 2
 		    && !strncmp(tokenPtr[1].start, "on", 2)) {
 		int code;
-		static const char *const returnCodes[] = {
-		    "ok", "error", "return", "break", "continue", NULL
-		};
 
 		/*
 		 * Parse the result code to look for.
@@ -2010,9 +2007,7 @@ TclCompileTryCmd(
 		    TclDecrRefCount(tmpObj);
 		    goto failedToCompile;
 		}
-		if (Tcl_GetIntFromObj(NULL, tmpObj, &code) != TCL_OK
-			&& Tcl_GetIndexFromObj(NULL, tmpObj, returnCodes, "",
-				TCL_EXACT, &code) != TCL_OK) {
+		if (TCL_ERROR == TclGetCompletionCodeFromObj(NULL, tmpObj, &code)) {
 		    TclDecrRefCount(tmpObj);
 		    goto failedToCompile;
 		}
